Temporarily downgrade gradle module language level
 - resolves a "Project Problems" regression
 - temporary until proper fix is implemented